--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 3to2==1.1.1
 appdirs==1.4.3
 applib==1.2
+certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 cmdln==2.0.0
@@ -8,11 +9,14 @@ CodeIntel==2.0.0
 esprima==4.0.1
 Flask==1.0.2
 gunicorn==19.9.0
+idna==2.8
 Inflector==2.0.12
 itsdangerous==1.1.0
 Jinja2==2.10.1
 libclang-py3==3.9.0
 MarkupSafe==1.1.1
+requests==2.21.0
 six==1.12.0
+urllib3==1.24.2
 Werkzeug==0.15.2
 zope.cachedescriptors==4.3.1
