--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 libclang-py3==3.9.0
 MarkupSafe==1.1.1
+python-dateutil==2.8.0
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.2
