--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 3to2==1.1.1
+alembic==1.0.10
 appdirs==1.4.3
 applib==1.2
 certifi==2019.3.9
@@ -8,16 +9,21 @@ cmdln==2.0.0
 CodeIntel==2.0.0
 esprima==4.0.1
 Flask==1.0.2
+Flask-Migrate==2.4.0
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
 idna==2.8
 Inflector==2.0.12
 itsdangerous==1.1.0
 Jinja2==2.10.1
 libclang-py3==3.9.0
+Mako==1.0.10
 MarkupSafe==1.1.1
 python-dateutil==2.8.0
+python-editor==1.0.4
 requests==2.21.0
 six==1.12.0
+SQLAlchemy==1.3.3
 urllib3==1.24.2
 Werkzeug==0.15.2
 zope.cachedescriptors==4.3.1
